--- a/pages/19061.html
+++ b/pages/19061.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8322/#Item_7" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8322/#Item_8" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -317,7 +317,8 @@ margin-left: 0em;
 
 <h4 id="string_theory">String theory</h4>
 
-<div class="hide"><ul>
+<div class="hide"><div>
+<ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a></strong></p>
 </li>
@@ -325,7 +326,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/books+about+string+theory">books about string theory</a></p>
 </li>
-</ul><h3 id="ingredients">Ingredients</h3><ul>
+</ul>
+
+<h3 id="ingredients">Ingredients</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a></p>
 </li>
@@ -345,7 +350,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>, <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a>, <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a>, <a class="existingWikiWord" href="/nlab/show/quantum+gravity">quantum gravity</a></li>
 </ul>
 </li>
-</ul><h3 id="critical_string_models">Critical string models</h3><ul>
+</ul>
+
+<h3 id="critical_string_models">Critical string models</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/heterotic+string+theory">heterotic string theory</a></p>
 
@@ -425,7 +434,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Ho%C5%99ava-Witten+theory">Hořava-Witten theory</a></li>
 </ul>
 </li>
-</ul><h3 id="extended_objects">Extended objects</h3><ul>
+</ul>
+
+<h3 id="extended_objects">Extended objects</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/brane">brane</a></p>
 </li>
@@ -509,7 +522,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h3 id="topological_strings">Topological strings</h3><ul>
+</ul>
+
+<h3 id="topological_strings">Topological strings</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/topological+string">topological string</a>, <a class="existingWikiWord" href="/nlab/show/TCFT">TCFT</a></p>
 
@@ -521,7 +538,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/topological+M-theory">topological M-theory</a></p>
 </li>
-</ul><h2 id="backgrounds">Backgrounds</h2><ul>
+</ul>
+
+<h2 id="backgrounds">Backgrounds</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/target+space">target space</a>, <a class="existingWikiWord" href="/nlab/show/background+gauge+field">background gauge field</a></p>
 </li>
@@ -533,7 +554,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/landscape+of+string+theory+vacua">landscape of string theory vacua</a></p>
 </li>
-</ul><h2 id="phenomenology">Phenomenology</h2><ul>
+</ul>
+
+<h2 id="phenomenology">Phenomenology</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a></p>
 
@@ -547,11 +572,12 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/string+theory+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -567,6 +593,8 @@ margin-left: 0em;
 <h2 id="idea">Idea</h2>
 
 <p>What has come to be called <em>nonabelian T-duality</em> (<a href="#OssaQuevedo92">Ossa-Quevedo 92</a>) <em>Poisson-Lie T-Duality</em> (due to <a href="#KlimcikSevera95">Klimcik-Ševera 95</a>, <a href="#vonUnge02">von Unge 02</a>) is a generalization of <a class="existingWikiWord" href="/nlab/show/T-duality">T-duality</a> from <a class="existingWikiWord" href="/nlab/show/fiber+bundles">fiber bundles</a> equipped with an <a class="existingWikiWord" href="/nlab/show/abelian+group">abelian group</a> of <a class="existingWikiWord" href="/nlab/show/isometries">isometries</a> (<a class="existingWikiWord" href="/nlab/show/torus">torus</a> <a class="existingWikiWord" href="/nlab/show/bundles">bundles</a>) to those with a <a class="existingWikiWord" href="/nlab/show/nonabelian+group">nonabelian group</a> of isometries.</p>
+
+<p>It has been proven that these generalized T-dualities are are/induce equivalences of the corresponding <a class="existingWikiWord" href="/nlab/show/string">string</a> <a class="existingWikiWord" href="/nlab/show/sigma-models">sigma-models</a> at the level of <a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical field theory</a>. However it seems to be open, and in fact questionable, that away from standard <a class="existingWikiWord" href="/nlab/show/T-duality">T-duality</a> this yields an equivalence at the level of <a class="existingWikiWord" href="/nlab/show/worldsheet">worldsheet</a> <a class="existingWikiWord" href="/nlab/show/quantum+field+theories">quantum field theories</a>, hence it is open whether Poisson-Lie/non-abelian T-duality is really a duality operation on <a class="existingWikiWord" href="/nlab/show/perturbative+string+theory+vacua">perturbative string theory vacua</a>.</p>
 
 <h2 id="related_lab_entries">Related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
 
@@ -633,14 +661,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 24, 2018 at 12:41:39.
+  Last revised on January  9, 2019 at 01:04:06.
   See the <a href="https://ncatlab.org/nlab/history/Poisson-Lie T-duality" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Poisson-Lie+T-duality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Poisson-Lie+T-duality/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Poisson-Lie+T-duality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Poisson-Lie+T-duality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Poisson-Lie+T-duality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Poisson-Lie+T-duality/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Poisson-Lie+T-duality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Poisson-Lie+T-duality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Poisson-Lie T-duality/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
