--- a/pages/931.html
+++ b/pages/931.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9445/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9445/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -740,6 +740,8 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/transitive+action">transitive</a>: for every two points in (a fiber of) the space, there is an element of the group taking one to the other.</li>
 </ul>
 
+<p>The second axiom says that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">⟨</mo><mi>ρ</mi><mo>,</mo><msub><mi>π</mi> <mn>2</mn></msub><mo stretchy="false">⟩</mo><mo>:</mo><mi>G</mi><mo>×</mo><mi>P</mi><mo>→</mo><mi>P</mi><mo>×</mo><mi>P</mi></mrow><annotation encoding="application/x-tex">\langle \rho, \pi_2 \rangle: G \times P \to P \times P</annotation></semantics></math> is surjective, and the first says it is injective.</p>
+
 <p>In other words, in the classical case where we are working in the category of sets over the point, a torsor is a <a class="existingWikiWord" href="/nlab/show/heap">heap</a>:</p>
 
 <p>a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-set <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>P</mi></mrow><annotation encoding="application/x-tex">P</annotation></semantics></math> with action <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ρ</mi><mo>:</mo><mi>G</mi><mo>×</mo><mi>P</mi><mo>→</mo><mi>P</mi></mrow><annotation encoding="application/x-tex">\rho: G \times P \to P</annotation></semantics></math> such that every choice of point <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi><mo>∈</mo><mi>P</mi></mrow><annotation encoding="application/x-tex">p \in P</annotation></semantics></math> induces an isomorphism of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-sets</p>
@@ -1003,14 +1005,14 @@ P \times P &amp; \underset{id \times \Delta}{\to} &amp; P \times P \times P
 
 <div class="revisedby">
   <p>
-  Last revised on January  9, 2019 at 08:59:28.
+  Last revised on January  9, 2019 at 09:21:07.
   See the <a href="https://ncatlab.org/nlab/history/torsor" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/torsor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/torsor/31" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(31 revisions)</span> | <a href="/nlab/show/diff/torsor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/torsor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/torsor" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/torsor/32" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(32 revisions)</span> | <a href="/nlab/show/diff/torsor" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/torsor" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/torsor/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
