--- a/pages/17721.html
+++ b/pages/17721.html
@@ -317,7 +317,10 @@ margin-left: 0em;
 
 <h4 id="deduction_and_induction">Deduction and Induction</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/deductive+reasoning">deductive reasoning</a></strong>, <a class="existingWikiWord" href="/nlab/show/deduction">deduction</a></p><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/deductive+reasoning">deductive reasoning</a></strong>, <a class="existingWikiWord" href="/nlab/show/deduction">deduction</a></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/sequent">sequent</a></p>
 
@@ -345,7 +348,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/inductive+reasoning">inductive reasoning</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/inductive+reasoning">inductive reasoning</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/induction">induction</a>, <a class="existingWikiWord" href="/nlab/show/recursion">recursion</a></p>
 </li>
@@ -353,11 +360,14 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/inductive+type">inductive type</a>, <a class="existingWikiWord" href="/nlab/show/higher+inductive+type">higher inductive type</a></p>
 </li>
-</ul></div>
+</ul></div></div>
 
 <h4 id="type_theory">Type theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/natural+deduction">natural deduction</a></strong> <a class="existingWikiWord" href="/nlab/show/metalanguage">metalanguage</a>, <a class="existingWikiWord" href="/nlab/show/practical+foundations">practical foundations</a></p><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/natural+deduction">natural deduction</a></strong> <a class="existingWikiWord" href="/nlab/show/metalanguage">metalanguage</a>, <a class="existingWikiWord" href="/nlab/show/practical+foundations">practical foundations</a></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/judgement">judgement</a></p>
 </li>
@@ -369,7 +379,9 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/antecedents">antecedents</a><math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_326683e7e945796d64895ffa5c2711037bd82af8_1"><semantics><mrow><mo>⊢</mo></mrow><annotation encoding="application/x-tex">\vdash</annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/consequent">consequent</a>, <a class="existingWikiWord" href="/nlab/show/succedents">succedents</a></li>
 </ul>
 </li>
-</ul><ol>
+</ul>
+
+<ol>
 <li><a class="existingWikiWord" href="/nlab/show/type+formation+rule">type formation rule</a></li>
 
 <li><a class="existingWikiWord" href="/nlab/show/term+introduction+rule">term introduction rule</a></li>
@@ -377,9 +389,17 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/term+elimination+rule">term elimination rule</a></li>
 
 <li><a class="existingWikiWord" href="/nlab/show/computation+rule">computation rule</a></li>
-</ol><p><strong><a class="existingWikiWord" href="/nlab/show/type+theory">type theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/dependent+type+theory">dependent</a>, <a class="existingWikiWord" href="/nlab/show/intensional+type+theory">intensional</a>, <a class="existingWikiWord" href="/nlab/show/observational+type+theory">observational type theory</a>, <a class="existingWikiWord" href="/nlab/show/homotopy+type+theory">homotopy type theory</a>)</p><ul>
+</ol>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/type+theory">type theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/dependent+type+theory">dependent</a>, <a class="existingWikiWord" href="/nlab/show/intensional+type+theory">intensional</a>, <a class="existingWikiWord" href="/nlab/show/observational+type+theory">observational type theory</a>, <a class="existingWikiWord" href="/nlab/show/homotopy+type+theory">homotopy type theory</a>)</p>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/calculus+of+constructions">calculus of constructions</a></li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/syntax">syntax</a></strong> <a class="existingWikiWord" href="/nlab/show/object+language">object language</a></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/syntax">syntax</a></strong> <a class="existingWikiWord" href="/nlab/show/object+language">object language</a></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/theory">theory</a>, <a class="existingWikiWord" href="/nlab/show/axiom">axiom</a></p>
 </li>
@@ -395,7 +415,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/theorem">theorem</a></p>
 </li>
-</ul><p><strong></strong> = <strong></strong> +<strong></strong> +<strong></strong></p><table><thead><tr><th></th><th></th><th></th></tr></thead><tbody><tr><td style="text-align: left;"></td><td style="text-align: left;">/</td><td style="text-align: left;">-/</td></tr>
+</ul>
+
+<p><strong></strong> = <strong></strong> +<strong></strong> +<strong></strong></p>
+
+<table><thead><tr><th></th><th></th><th></th></tr></thead><tbody><tr><td style="text-align: left;"></td><td style="text-align: left;">/</td><td style="text-align: left;">-/</td></tr>
 <tr><td style="text-align: left;"></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
 <tr><td style="text-align: left;"></td><td style="text-align: left;"></td><td style="text-align: left;">, </td></tr>
 <tr><td style="text-align: left;"></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
@@ -420,7 +444,11 @@ margin-left: 0em;
 <tr><td style="text-align: left;"></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
 <tr><td style="text-align: left;">(absence of) </td><td style="text-align: left;">(absence of) </td><td style="text-align: left;"></td></tr>
 <tr><td style="text-align: left;"></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
-</tbody></table><p><strong><a class="existingWikiWord" href="/nlab/show/homotopy+levels">homotopy levels</a></strong></p><ul>
+</tbody></table>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/homotopy+levels">homotopy levels</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/type+theory">type theory</a></p>
 </li>
@@ -454,7 +482,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/semantics">semantics</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/semantics">semantics</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/internal+logic">internal logic</a>, <a class="existingWikiWord" href="/nlab/show/categorical+semantics">categorical semantics</a></p>
 
@@ -484,25 +516,36 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/type-theoretic+model+category">type-theoretic model category</a></li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/type+theory+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 
 <h4 id="induction">Induction</h4>
 
-<div class="hide"><ul>
+<div class="hide"><div>
+
+<ul>
 <li><strong><a class="existingWikiWord" href="/nlab/show/inductive+type">inductive type</a></strong></li>
 
 <li><strong><a class="existingWikiWord" href="/nlab/show/higher+inductive+type">higher inductive type</a></strong></li>
 
 <li><strong><a class="existingWikiWord" href="/nlab/show/coinductive+type">coinductive type</a></strong></li>
-</ul><h2 id="rules">Rules</h2><ul>
+</ul>
+
+<h2 id="rules">Rules</h2>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/induction">induction</a>, <a class="existingWikiWord" href="/nlab/show/coinduction">coinduction</a></li>
 
 <li><a class="existingWikiWord" href="/nlab/show/recursion">recursion</a>, <a class="existingWikiWord" href="/nlab/show/corecursion">corecursion</a></li>
-</ul><h2 id="categorical_semantics">Categorical semantics</h2><ul>
+</ul>
+
+<h2 id="categorical_semantics">Categorical semantics</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/initial+algebra+of+an+endofunctor">initial algebra of an endofunctor</a>, <a class="existingWikiWord" href="/nlab/show/terminal+coalgebra+of+an+endofunctor">terminal coalgebra of an endofunctor</a></p>
 </li>
@@ -510,7 +553,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/initial+algebra+of+a+presentable+%E2%88%9E-monad">initial algebra of a presentable ∞-monad</a></p>
 </li>
-</ul><h2 id="examples">Examples</h2><ul>
+</ul>
+
+<h2 id="examples">Examples</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/natural+numbers+object">natural numbers object</a>, <a class="existingWikiWord" href="/nlab/show/list">list</a>,</p>
 </li>
@@ -522,11 +569,12 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/W-type">W-type</a></p>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/induction+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -554,7 +602,7 @@ margin-left: 0em;
 
 <h2 id="results">Results</h2>
 
-<p>Inductive-inductive types are related to <a class="existingWikiWord" href="/nlab/show/inductive-recursive+types">inductive-recursive types</a>. Importantly, inductive-inductive types have an initial algebra semantics with respect to <a class="existingWikiWord" href="/nlab/show/dialgebras">dialgebras</a>. In <a href="#ForsbergThesis">Forsberg’s thesis</a> inductive-inductive types are reduced to <a class="existingWikiWord" href="/nlab/show/indexed+inductive+types">indexed inductive types</a> in the setting of extensional type theory. This reduction however only provides non-dependent elimination rules. Indexed inductive types in turn can be reduced to <a class="existingWikiWord" href="/nlab/show/W-types">W-types</a> in extensional type theory. See <a class="existingWikiWord" href="/nlab/show/inductive+families">inductive families</a>.</p>
+<p>Inductive-inductive types are related to <a class="existingWikiWord" href="/nlab/show/inductive-recursive+types">inductive-recursive types</a>. Importantly, inductive-inductive types have an initial algebra semantics with respect to <a class="existingWikiWord" href="/nlab/show/dialgebras">dialgebras</a>. In <a href="#ForsbergThesis">Forsberg’s thesis</a> inductive-inductive types are reduced to <a class="existingWikiWord" href="/nlab/show/indexed+inductive+types">indexed inductive types</a> in the setting of extensional type theory. This reduction however only provides “simple” elimination rules (not to be confused with <em>simply typed</em>). Indexed inductive types in turn can be reduced to <a class="existingWikiWord" href="/nlab/show/W-types">W-types</a> in extensional type theory. See <a class="existingWikiWord" href="/nlab/show/inductive+families">inductive families</a>.</p>
 
 <p>The consistency of the framework used for the elimination (e.g. in the <a class="existingWikiWord" href="/nlab/show/theorem+prover">theorem prover</a> <a class="existingWikiWord" href="/nlab/show/Agda">Agda</a>) is not so clear, as it allows the definition of a universe containing a code for itself. There is an axiomatisation of the new principle in such a way that the resulting type theory is consistent, as proved by constructing a set-theoretic model; see <a href="#ForsbergSetzer10">Forsberg-Setzer 10</a>.</p>
 
@@ -611,14 +659,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 16, 2018 at 14:26:05.
+  Last revised on January  9, 2019 at 11:42:41.
   See the <a href="https://ncatlab.org/nlab/history/inductive-inductive type" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/inductive-inductive+type" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/inductive-inductive+type/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/inductive-inductive+type" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/inductive-inductive+type" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/inductive-inductive+type" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/inductive-inductive+type/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/inductive-inductive+type" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/inductive-inductive+type" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/inductive-inductive type/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
