--- a/pages/18608.html
+++ b/pages/18608.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9264/#Item_15" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9264/#Item_16" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1162,6 +1162,14 @@ margin-left: 0em;
 <p>Experimentally, there is a large number of facts that lack a detailed qualitative and quantitative explanation. The most spectacular manifestation of our lack of theoretical understanding of QCD is the failure to observe the elementary degrees of freedom, quarks and gluons, as free asymptotic states (color con- finement) and the occurrence, instead, of families of massive mesons and baryons (hadrons) that form approximately linear Regge trajectories in the mass squared. The internal, partonic structure of hadrons, and nucleons in particular, is still largely mysterious. Since protons and neutrons form almost all the visible matter of the Universe, it is of basic importance to explore their static and dynamical properties in terms of quarks and gluons interacting according to QCD dynamics.</p>
 </blockquote>
 
+<ul>
+<li>V. A. Petrov, <em>Asymptotic Regimes of Hadron Scattering in QCD</em> (<a href="https://arxiv.org/abs/1901.02628">arXiv:1901.02628</a>)</li>
+</ul>
+
+<blockquote>
+<p>This is a commonplace that so far we do not have a full-fledged theory of interaction of <a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a>, derived from the first principles of <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> and having a regular way of calculating of hadronic <a class="existingWikiWord" href="/nlab/show/scattering+amplitude">amplitudes</a>, especially at high energies and small momentum transfers. The problem is related to a more general problem that QCD Lagrangian would yield <a class="existingWikiWord" href="/nlab/show/confinement">colour confinement</a> with massive colourless physical states (hadrons).</p>
+</blockquote>
+
 <p>Of course various partial approaches exist, notably computer-<a class="existingWikiWord" href="/nlab/show/experiment">experiment</a> in <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a>. (Such computer-checks of the mass-gap problem are analogous to computer checks of the <a class="existingWikiWord" href="/nlab/show/Riemann+hypothesis">Riemann hypothesis</a>, see <a href="Riemann+hypothesis#ReferencesComputerChecks">there</a>) High-accuracy computation of <a class="existingWikiWord" href="/nlab/show/hadron">hadron</a>-<a class="existingWikiWord" href="/nlab/show/masses">masses</a> in <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a>-simulations are reported here:</p>
 
 <ul>
@@ -1189,14 +1197,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  3, 2019 at 06:16:58.
+  Last revised on January 10, 2019 at 02:21:13.
   See the <a href="https://ncatlab.org/nlab/history/mass gap" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/mass+gap" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/mass+gap/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/mass+gap" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/mass+gap" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/mass+gap" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/mass+gap/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/mass+gap" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/mass+gap" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/mass gap/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
